# ImageRecogMl

./: .envrc  .gitignore  Makefile  pyproject.toml  render.yaml  requirements.txt
models/new_normalization/layer_000_conv/: layer_000_conv.npz  layer_000_conv.toml
models/new_normalization/layer_001_conv/: layer_001_conv.npz  layer_001_conv.toml
models/new_normalization/layer_002_flat/: layer_002_flat.toml
models/new_normalization/layer_003_dense/: layer_003_dense.toml
models/pato3/: model.toml
models/pato3/layer_000_conv/: layer_000_conv.npz  layer_000_conv.toml
models/pato3/layer_001_conv/: layer_001_conv.npz  layer_001_conv.toml
models/pato3/layer_003_dense/: layer_003_dense.npz  layer_003_dense.toml
models/test_normalization/layer_000_conv/: layer_000_conv.npz  layer_000_conv.toml
models/test_normalization/layer_001_conv/: layer_001_conv.npz  layer_001_conv.toml
models/test_normalization/layer_002_flat/: layer_002_flat.toml
models/test_normalization/layer_003_dense/: layer_003_dense.npz  layer_003_dense.toml
src/: main.py  training.py
src/app/dataset/: dataset_factory.py
src/app/predict/: model_factory.py
src/app/utils/: b64_serializer.py  img_normalization.py  show_img.py
src/framework/: app_error.py
src/static/: script.js
src/templates/: index.html
